test/libyul/yulSyntaxTests/name_clash_sub_scope.yul
{
	function g() {
		function g() {}
	}
}
// ----
// DeclarationError 6052: (20-35='function g() {}'): Function name g already taken in this scope.
